--- a/cookbooks/multimedia/templates/default/mopidy.conf.erb
+++ b/cookbooks/multimedia/templates/default/mopidy.conf.erb
@@ -4,6 +4,7 @@ description "start and stop mopidy process"
 version "1.0"
 author "Jacek Szarski"
 
-start on (local-filesystems and net-device-up IFACE=eth0)                          
+start on (local-filesystems and net-device-up IFACE!=lo)
 stop on runlevel [!2345]                                                           
+respawn
 exec su -s /bin/sh -c 'exec "$0" "$@"' <%= @mopidy_username %> -- mopidy > <%= @mopidy_log_path %> 2>&1
