adds mixer options to the mopidy recipe

--- a/cookbooks/multimedia/templates/default/settings.py.erb
+++ b/cookbooks/multimedia/templates/default/settings.py.erb
@@ -1,3 +1,6 @@
 MPD_SERVER_HOSTNAME = u'<%= @mopidy_host %>'
 SPOTIFY_USERNAME = u'<%= @spotify_username %>'
 SPOTIFY_PASSWORD = u'<%= @spotify_password %>'
+
+MIXER = u'alsamixer'
+OUTPUT = u'alsasink'
