implements transmission watch dir settings

--- a/cookbooks/transmission/templates/default/settings.json.erb
+++ b/cookbooks/transmission/templates/default/settings.json.erb
@@ -16,6 +16,8 @@
     "encryption": 1,
     "incomplete-dir": "<%= node['transmission']['incomplete_dir'] %>",
     "incomplete-dir-enabled": <%= node['transmission']['incomplete_dir_enabled'] %>,
+    "watch-dir": "<%= node['transmission']['watch_dir'] %>",
+    "watch-dir-enabled": <%= node['transmission']['watch_dir_enabled'] %>,
     "lazy-bitfield-enabled": true,
     "max-peers-global": 200,
     "message-level": 2,
